RESOLVED FIXED61147
Hang UI appears when WebProcess isn't running
https://bugs.webkit.org/show_bug.cgi?id=61147
Summary Hang UI appears when WebProcess isn't running
Anders Carlsson
Reported 2011-05-19 14:55:13 PDT
Hang UI appears when WebProcess isn't running
Attachments
Patch (5.50 KB, patch)
2011-05-19 15:02 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-05-19 15:02:44 PDT
Sam Weinig
Comment 2 2011-05-19 15:07:10 PDT
Comment on attachment 94125 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=94125&action=review > Source/WebKit2/UIProcess/WebContext.cpp:458 > m_historyClient.didUpdateHistoryTitle(this, frame->page(), title, url, frame); This should just use page.
Anders Carlsson
Comment 3 2011-05-19 15:10:33 PDT
Note You need to log in before you can comment on or make changes to this bug.